--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phongphat Luangphitak - Web Developer Profile</title>
+    <link rel="icon" href="https://avatars.githubusercontent.com/u/120770345?s=400&u=23ee2544a857e27b2a6eef474dee2bf750ed0f70&v=4" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 
 <body class="bg-gray-100 text-gray-800">
     <div class="max-w-5xl mx-auto p-6 bg-white shadow-lg rounded-lg">
