--- a/index.html
+++ b/index.html
@@ -113,6 +113,39 @@
                 <li>Start Building Microservices with Golang from Ruangyot Nanchiang</li>
             </ul>
         </section>
+                <section class="p-4">
+            <h2 class="text-3xl font-bold text-blue-600 border-b-2 pb-2 border-gray-300 mb-4">My Project</h2>
+            <div class="bg-white shadow-lg rounded-lg overflow-hidden w-full max-w-4xl mx-auto my-2">
+                <div class="text-center py-4 bg-blue-500 text-white">
+                    <h1 class="text-2xl font-bold">US Choropleth Map</h1>
+                    <a href="https://tomphongphath.github.io/USChoroplethMap/" target="_blank"
+                        class="underline hover:text-yellow-300">
+                        https://tomphongphath.github.io/USChoroplethMap/
+                    </a>
+                </div>
+                <iframe src="https://tomphongphath.github.io/USChoroplethMap/" class="w-full h-[400px]"></iframe>
+            </div>
+            <div class="bg-white shadow-lg rounded-lg overflow-hidden w-full max-w-4xl mx-auto my-2">
+                <div class="text-center py-4 bg-blue-500 text-white">
+                    <h1 class="text-2xl font-bold">Drum Machine Web App</h1>
+                    <a href="https://tomphongphath.github.io/DrumMachine/" target="_blank"
+                        class="underline hover:text-yellow-300">
+                        https://tomphongphath.github.io/DrumMachine/
+                    </a>
+                </div>
+                <iframe src="https://tomphongphath.github.io/DrumMachine/" class="w-full h-[400px]"></iframe>
+            </div>
+            <div class="bg-white shadow-lg rounded-lg overflow-hidden w-full max-w-4xl mx-auto my-2">
+                <div class="text-center py-4 bg-blue-500 text-white">
+                    <h1 class="text-2xl font-bold">JavaScript Calculator</h1>
+                    <a href="https://tomphongphath.github.io/JavaScriptCalculator/" target="_blank"
+                        class="underline hover:text-yellow-300">
+                        https://tomphongphath.github.io/JavaScriptCalculator/
+                    </a>
+                </div>
+                <iframe src="https://tomphongphath.github.io/JavaScriptCalculator/" class="w-full h-[400px]"></iframe>
+            </div>
+        </section>
     </div>
 </body>
 
