--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="max-w-5xl mx-auto p-6 bg-white shadow-lg rounded-lg">
         <section id="me" class="flex items-center justify-between mb-10">
             <div class="w-1/4">
-                <img src="https://scontent.fbkk8-4.fna.fbcdn.net/v/t39.30808-6/448609315_1788098958624315_7916768260495188177_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeEIUr4-ZITGuHikYo6WZkeocJ0Nt2OCjGlwnQ23Y4KMaXrqWlRc6t63-eVsW8TVJe93v1e3ecIcoZisjEE8Ps2l&_nc_ohc=eLOnArc4c2IQ7kNvgHiLUns&_nc_ht=scontent.fbkk8-4.fna&_nc_gid=Aiq4zkm9CRvpK2kcXWetPf3&oh=00_AYCiv5Txh5R5-UQ_7kGAhqzhtDlD9gR1VYvScuRVy3h7fA&oe=67183B3D"
+                <img src="https://scontent.fkkc4-2.fna.fbcdn.net/v/t39.30808-6/407633229_1670966783670867_2497033383636630546_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeEn_jSHOQRMP_Nw7aMn9T_DaEd4lUn_LOloR3iVSf8s6S_1ehEZOTSm7RW0j9FdK7qjdDjT-Guh2fRsKX6oqwEQ&_nc_ohc=1opMuj4n_SYQ7kNvgHJhZAK&_nc_zt=23&_nc_ht=scontent.fkkc4-2.fna&_nc_gid=AM1KGsHb-ZzbjZd8Srrk1wY&oh=00_AYDagnR4f-zBE8UurvM29cD9Wf0b-eBHJJaTJfVw9OBs3g&oe=67355824"
                     alt="Profile Photo" class="rounded-lg shadow-lg">
             </div>
             <div>
